website/src/app/views/our-team/OurTeam.css
@import "../../../styles/common.css";

.ctc-ourteam-bg {
  background-color: #f5f5f5;
  min-height: 100%;
  height: 100vh;
  width: 100%;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

.ctc-ourteam-container {
  padding: 3% 2% 0 2%;
  width: 96%;
  min-height: calc(96% - 275px);
  color: white;
  text-align: center;
  overflow: scroll;
}

.ctc-ourteam-centered-container {
  display: flex;
  justify-content: center;
}

.ctc-ourteam-header {
  font-size: 48px;
  font-weight: 600;
  line-height: 64px;
  color: var(--dark-purple);
}

.ctc-ourteam-tabs {
  display: flex;
  justify-content: center;
  width: 90%;
  margin: 0;
}

.ctc-ourteam-tab {
  border: 1px solid var(--dark-purple);
  color: var(--dark-purple);
  border-radius: 10px;
  text-align: center;
  margin: 0 25px;
  min-width: 60px;
  padding: 4px 5%;
  font-size: 16px;
  line-height: 24px;
  cursor: pointer;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}

.ctc-ourteam-tab:hover {
  background-color: #fff;
  transition: 0.5s;
}

.ctc-ourteam-tab-active,
.ctc-ourteam-tab-active:hover {
  background-color: var(--dark-purple);
  color: white;
  transition: 0.5s;
  cursor: default;
}

.ctc-ourteam-cards {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 30px 0;
  width: 100%;
  max-width: 4000px;
}

.ctc-ourteam-card {
  border: 0;
  /* border: 1px solid white; */
  border-radius: 20px;
  text-align: center;
  margin: 25px 30px;
  font-size: 16px;
  line-height: 24px;
  max-height: 260px;
  flex: 0 0 260px;
  box-shadow: 4.2px 6.5px 2px rgba(13, 9, 26, 0.55);
}

.ctc-ourteam-card-overlay {
  background-image: linear-gradient(
    to bottom,
    transparent 0%,
    transparent 47.5%,
    black 105%
  );
  border-radius: 20px;
  width: 100%;
  height: 260px;
  max-height: 260px;
  position: relative;
  bottom: 144.2%;
  z-index: 2;
}

.ctc-ourteam-card-link {
  text-decoration: none;
  color: white;
  z-index: 5;
}

.ctc-ourteam-card-photo {
  border-radius: 20px;
  width: 100%;
  height: 260px;
}

.ctc-ourteam-card-bottom-row {
  position: relative;
  width: 95%;
  bottom: 44%;
  display: flex;
  justify-content: center;
}

.ctc-ourteam-card-linkedin {
  position: relative;
  width: 28px;
  padding-bottom: 5px;
  bottom: 4.4%;
  z-index: 5;
}

.ctc-ourteam-card-name {
  position: relative;
  bottom: 37%;
  font-family: "Montserrat";
  font-size: 20px;
  font-weight: 600;
  line-height: 30px;
  z-index: 3;
  text-align: center;
}

.ctc-ourteam-card-pos {
  font-size: 16px;
  font-weight: 200;
  line-height: 24px;
  z-index: 3;
  margin: 0 12px 0 20px;
}

.ourteam-footer.ourteam-footer {
  position: static;
  margin-top: 40px;
}

@media screen and (max-width: 1400px) {
  .ctc-ourteam-header {
    margin-top: 50px;
    font-size: 32px;
    line-height: 40px;
  }
  .ctc-ourteam-container {
    min-height: calc(96% - 265px);
  }
  .ctc-ourteam-tabs {
    width: 90%;
    flex-wrap: wrap;
  }
  .ctc-ourteam-tab {
    flex: 0 0 60%;
    margin: 10px;
    min-width: 90px;
    padding: 4px 4%;
    font-size: 14px;
    line-height: 24px;
    cursor: pointer;
  }
}

@media screen and (max-width: 500px) {
  .ctc-ourteam-header {
    margin-top: 60px;
  }
  .ctc-ourteam-cards {
    margin-top: 10px;
  }
}

